# siema_fastapi

./: .envrc_example  .gitignore  README.md  docker-compose.yml
app/: .dockerignore  alembic.ini  requirements.txt  setup.cfg
app/app/: database.py  main.py  schemas.py  utils.py
app/app/models/: __init__.py  crud.py  models.py
app/migration/: env.py
app/migration/versions/: 2f2b3df405de_create_tables.py
app/tests/: test_categories.py  test_products.py  test_root.py  test_sales.py
docker/: .env
docker/app/: Dockerfile
