[options]
python_requires = >=3.10

[tool:pytest]
python_files = test.py tests.py test_*.py *_test.py
addopts = -rs -p no:warnings --durations=5
norecursedirs = docker **/migrations/*.py
markers =
    slow: marks tests as slow (deselect with '-m \"not slow\"'),
    integration: marks tests as integration (deselect with '-m \"not integration\"')
